-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
A recent lov cleanup (patch 5ccd7a4a556b1a847eb5bff8b2395522a6f4bca8 http://review.whamcloud.com/13722 by John Hammond) has introduced an infinite loop in lsm_alloc_plain by changing type of variable 'i' from signed to unsigned:
struct lov_stripe_md *lsm_alloc_plain(u16 stripe_count)
{
...
unsigned int i;
...
err:
while (--i >= 0)
OBD_SLAB_FREE(lsm->lsm_oinfo[i], lov_oinfo_slab, sizeof(*loi));
Now the while loop is infinite.